# Chess-Engine-with-Bot-Scripts

./: .gitignore  CMakeLists.txt  README.md
builds/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Chess.sln  Chess.vcxproj  Chess.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
builds/Chess.dir/Debug/: Chess.exe.recipe  Chess.ilk
builds/Chess.dir/Debug/Chess.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
builds/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
builds/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
builds/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
builds/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
include/: Chess.h  UI.h
src/: Chess.cpp  main.cpp
